--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <title>This is a title</title>
-  </head>
-  <body>
-    <p>Hello world!</p>
-  </body>
+<head>
+    <meta charset="utf-8">
+    <title>Hello World</title>
+    <link href="styles/main.css" rel="stylesheet">
+</head>
+<body>
+    <h1>Hello, World!</h1>
+</body>
 </html>
